# parc-info

./: .dockerignore  .env.example  .gitattributes  .gitignore  ANTIVIRUS_OPTIMIZATION.md  ARCHITECTURE.md  AUDIT_CLEANUP_REPORT.md  AUDIT_COMPLET_2026_04_11.md  AUTO_UPDATE_SUMMARY.md  BUILD.md  CHANGELOG.md  CONNEXION_FIX.md  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  DATABASE_LOCKING_FIX.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_SUMMARY.txt  FIXES_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  INSTALLER_GUIDE.md  INSTALL_MACOS.md  INTEGRATION_EXAMPLE.py  INTEGRATION_STATUS.md  MERGE_GUIDE.md  MERGE_README.txt  PERSONALIZATION_IMPLEMENTATION.md  QUICKSTART.md  QUICK_START.md  README.md  README_DOCKER.md  RELEASE_NOTES.md  RELEASE_VERIFICATION.md  SECTION_NOMS_SERVICES.md  SYNOLOGY_DEPLOYMENT.md  SYNOLOGY_DOCKER_CONFIG.md  (+54 more)
.claude/: launch.json  settings.local.json
.claude/projects/E--Claude-Code-parc-info/memory/: MEMORY.md  architecture.md  dev_checklist.md  project_overview.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml
static/js/: form_tools.js  liste_tools.js  tri.js  update_notifier.js
templates/: 404.html  500.html  admin_email_config.html  admin_user_form.html  admin_users.html  baie_brassage.html  base.html  client_dashboard.html  clients.html  contrats.html  dashboard.html  detail_contrat.html  detail_intervention.html  documents_appareil.html  droits_utilisateur.html  form_appareil.html  form_client.html  form_contrat.html  form_identifiant.html  form_intervention.html  form_maintenance.html  form_peripherique.html  form_service.html  form_utilisateur.html  historique.html  historique_maintenance.html  identifiants.html  interventions.html  kb.html  liste_appareils.html  liste_maintenances.html  liste_plans.html  login.html  outils.html  parc_general.html  partage_client.html  peripheriques.html  plan_editeur.html  popup_identifiant.html  profil.html  (+8 more)
uploads/: app69_1775074327_Guide_de_lutilisateur.url  baie3_1775315258_1b8e6283-1057-4341-b3bc-656721abd9a7.jfif
