[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parc-info"
version = "1.0.0"
description = "Flask-based IT asset management system for multi-client environments with network scanning, audit trails, and containerization support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ParcInfo Team"}
]
keywords = ["asset-management", "it-inventory", "network-scanning", "multi-tenant", "flask"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.0",
    "Flask-SQLAlchemy>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
    "pystray>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/USERNAME/parc-info"
Documentation = "https://github.com/USERNAME/parc-info#documentation"
Repository = "https://github.com/USERNAME/parc-info.git"
Issues = "https://github.com/USERNAME/parc-info/issues"
Changelog = "https://github.com/USERNAME/parc-info/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["parc_info"]

[tool.setuptools.package-data]
parc_info = [
    "templates/*.html",
    "static/js/*.js",
    "static/css/*.css",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
